# besarfeh

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  scrape.yml
DB/: mci.csv  mtn.csv  rightel.csv
docs/: scraper-internals.md
src/besarfeh/: __init__.py  cli.py  export.py  ranking.py
src/besarfeh/scrapers/: _shared.py  irancell.py  mci.py  rightel.py
src/compare_internet_packages/: cli.py  ranking.py
src/compare_internet_packages/scrapers/: __init__.py  _shared.py  irancell.py  mci.py  rightel.py
tests/: test_cli.py  test_export.py  test_irancell.py  test_parsers.py  test_ranking.py  test_shared.py
web/: app.js  index.html  style.css
