[project]
name = "besarfeh"
version = "1.0.0"
description = "Compare Iranian mobile-internet packages (MCI / Irancell / RighTel) by price-per-megabyte"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13",
    "pandas>=2.2",
    "requests>=2.32",
    "tabulate>=0.9",
]

[project.scripts]
besarfeh = "besarfeh.cli:main"
besarfeh-refresh = "besarfeh.cli:refresh"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.9"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "UP", "B", "SIM"]
